Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
 <body>
 <div id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="img/doge.jpeg" alt="" width="180px" />&nbsp;</td>
+<img src="img/doge.jpg" alt="" width="180px" />&nbsp;</td>
 <td align="left"><h1>Bohao LI </h1>
 <p>Master's Student <br />
 <!-- <a href="https://www.csl.cornell.edu/" target=&ldquo;blank&rdquo;>Computer Systems Laboratory</a> <br />
 <a href="https://www.ece.cornell.edu/ece" target=&ldquo;blank&rdquo;>School of Electrical and Computer Engineering</a> <br />
 <a href="https://www.engineering.cornell.edu/" target=&ldquo;blank&rdquo;>College of Engineering</a> <br />
 <a href="https://www.cornell.edu/" target=&ldquo;blank&rdquo;>Cornell University</a> <br /> -->
-<b>Email</b>: 22341048 [at] zju.edu <br />
+<!-- <b>Email</b>: 22341048@zju.edu <br /> -->
+<p>
+  <strong>Email:</strong>
+  <a href="mailto:22341048@zju.edu" aria-label="Send email to 22341048@zju.edu">22341048@zju.edu</a>
+</p>
 
 <!-- <b>Office</b>: 471G Frank H. T. Rhodes Hall, Ithaca, NY</p> -->
 </td></tr></table>
-<p><a href="https://www.linkedin.com/in/qi-sun-b655a1146/" target="<u>blank"><img src="img/linkedin.png" height=30></a> <a href="https://scholar.google.com/citations?user=4OnODOAAAAAJ&hl=en" target="<u>blank"><img src="img/scholar.png" height=30></a>  </p>
+<!-- <p><a href="https://www.linkedin.com/in/qi-sun-b655a1146/" target="<u>blank"><img src="img/linkedin.png" height=30></a> <a href="https://scholar.google.com/citations?user=4OnODOAAAAAJ&hl=en" target="<u>blank"><img src="img/scholar.png" height=30></a>  </p> -->
 <h2>Biography</h2>
 <p>I'm a Master's student at the <a href="https://ic.zju.edu.cn/" target=&ldquo;blank&rdquo;>College of Integrated Circuits, Zhejiang University</a>, 
 under the supervision of <a href="https://person.zju.edu.cn/chengzhuo" target=&ldquo;blank&rdquo;>Prof.&nbsp;Cheng Zhuo</a> and <a href="https://person.zju.edu.cn/0023146" target=&ldquo;blank&rdquo;>Prof.&nbsp;Qi Sun</a> since Fall 2023. 
-Previously, I received my Bachelor's degree from the <a href="http://mse.hitsz.edu.cn" target=&ldquo;blank&rdquo;>Dept.&nbsp;of MSE</a>, HITSZ</a>, 
+Previously, I received my Bachelor's degree from the <a href="http://mse.hitsz.edu.cn" target=&ldquo;blank&rdquo;>Dept.&nbsp;of MSE, HITSZ</a>, 
 under the supervision of <a href="https://faculty.hitsz.edu.cn/zhangqian" target=&ldquo;blank&rdquo;>Prof. Qian Zhang</a> in <a href="http://thermoelectric.hitsz.edu.cn/index/tdcy.htm" target=&ldquo;blank&rdquo;> the lab of thermoelectric</a> in Jul. 2022.
 My research interests mainly focus on machine learning in EDA. 
 <!-- My work has been recognized with an ICCAD Best Paper Award, Bronze Medal of ICCAD Student Research Competition, and a Best Paper Award Nomination of DATE. </p>
@@ -49,8 +53,8 @@ My research interests mainly focus on machine learning in EDA.
 <h2>Selected Awards</h2>
 <table id="noborder">
 <tr class="r1"><td class="c1">Outstanding Graduate Student </td><td class="c2"> ZJU  </td><td class="c3"> 2024  </td></tr>
-<tr class="r2"><td class="c1">Second-class Scholarship </td><td class="c2"> HITSZ  </td><td class="c3"> 2020-2022  </td></tr>
-<tr class="r3"><td class="c1">Third-class Scholarship </td><td class="c2"> HITSZ </td><td class="c3"> 2019 - 2020 </td></tr>
+<tr class="r2"><td class="c1">Second-class Scholarship </td><td class="c2"> HITSZ  </td><td class="c3"> 2021, 2022  </td></tr>
+<tr class="r3"><td class="c1">Third-class Scholarship </td><td class="c2"> HITSZ </td><td class="c3"> 2020 </td></tr>
 </td></tr></table>
 <!-- <h2>Experience</h2>
 <h3>SmartMore</h3>
