--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="img/doge.jpg" alt="" width="180px" />&nbsp;</td>
+<img src="img/Bohao.jpg" alt="" width="180px" />&nbsp;</td>
 <td align="left"><h1>Bohao LI </h1>
 <p>Master's Student <br />
 <!-- <a href="https://www.csl.cornell.edu/" target=&ldquo;blank&rdquo;>Computer Systems Laboratory</a> <br />
