Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@ My research interests mainly focus on machine learning in EDA.
 </ul> -->
 <h2>Selected Awards</h2>
 <table id="noborder">
+<tr class="r1"><td class="c1">National Scholarship (2/172) </td><td class="c2"> ZJU  </td><td class="c3"> 2025  </td></tr>
+<tr class="r1"><td class="c1">Outstanding Graduate Student </td><td class="c2"> ZJU  </td><td class="c3"> 2025  </td></tr>
 <tr class="r1"><td class="c1">Outstanding Graduate Student </td><td class="c2"> ZJU  </td><td class="c3"> 2024  </td></tr>
-<tr class="r2"><td class="c1">Second-class Scholarship </td><td class="c2"> HITSZ  </td><td class="c3"> 2021, 2022  </td></tr>
-<tr class="r3"><td class="c1">Third-class Scholarship </td><td class="c2"> HITSZ </td><td class="c3"> 2020 </td></tr>
+<tr class="r2"><td class="c1">Second-class Scholarship (3/25) </td><td class="c2"> HITSZ  </td><td class="c3"> 2022 </td></tr>
+<tr class="r2"><td class="c1">Second-class Scholarship (2/27) </td><td class="c2"> HITSZ  </td><td class="c3"> 2021 </td></tr>
+<tr class="r3"><td class="c1">Third-class Scholarship (8/34) </td><td class="c2"> HITSZ </td><td class="c3"> 2020 </td></tr>
 </td></tr></table>
 <!-- <h2>Experience</h2>
 <h3>SmartMore</h3>
