Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@ My research interests mainly focus on machine learning in EDA.
 <h3>Conference papers</h3>
 <ul>
 </li>
+<li><p>[C3] <b>Bohao Li*</b>, Ranran Liu*, Yumeng Liu, Cong Jiang, Kang Liu, Bei Yu, Kun Ren, Qi Sun and Cheng Zhuo, "Lithography Hotspot Detection for Complex Non-Manhattan Layouts via Graph Neural Network", Design, Automation and Test in Europe Conference (<b>DATE</b>), Verona, Italy, Apr. 20-22, 2026.</p>
+</li>
 <li><p>[C2] <b>Bohao Li</b>, Qingsong Peng, Changhong Wang, Tianming Ni, Tinghuan Chen, Qi Sun, Cheng Zhuo, "H3Match: A Hybrid Heterogeneous Hypergraph Matching Method for Subcircuit Identification", ACM/IEEE Design Automation Conference (<b>DAC</b>), San Francisco, Jun. 22–25, 2025.</p>
 </li>
 <li><p>[C1] <b>Bohao Li</b>, Shizhang Wang, Tinghuan Chen, Qi Sun, Cheng Zhuo, "Efficient Subgraph Matching Framework for Fast Subcircuit Identification", 6th ACM/IEEE International Symposium on Machine Learning for CAD (<b>MLCAD</b>), Utah, Sept. 9-11, 2024.</p>
